--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
-h1, p {
-  font-family: cursive;
+h2, p {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2, p {
+  font-family: consolas;
 }
 
 .output {
